<resources>
    <string name="app_name">Hello Car</string>

    <!--Splash Screen-->
    <string name="hotline">Hotline: 01911889138</string>
    <string name="title">Select Language</string>

    <string name="english">English</string>
    <string name="bengali">Bengali</string>

    <array name="language">
        <item>@string/english</item>
        <item>@string/bengali</item>
    </array>
    <string name="choose">Choose</string>
    <string name="call_hotline">Are you sure to  call hotline ?</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="registration">Registration</string>
    <string name="name">Full Name</string>
    <string name="phone">Active Mobile Number</string>
    <string name="nid">NID</string>
    <string name="postal_address">Postal address</string>
    <string name="emergency_contact_number">Emergency contact number</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_main">Profile</string>
    <string name="title_request_car">Request car</string>
    <string name="title_profile" translatable="false">@string/title_activity_main</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="change_language">Change language</string>
    <string name="invalid_number">invalid number</string>
    <string name="required">required</string>
    <string name="emg_person_contact">provide emergency person contact</string>
    <string name="invalid_email">invalid email</string>
    <string name="not_same">not same</string>
    <string name="file_size">Maximum file size is 2MB. Selected image size is</string>
    <string name="error">Error Occurred</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="no_active_internet">No Active Internet</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="accept">Accepted</string>
    <string name="success">Success</string>
    <string name="profile_updated">Profile Updated :)</string>
    <string name="request_your_transport">request your transport</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Journey Date</string>
    <string name="time">Journey Time</string>
    <string name="sent_request">Sent Request</string>
    <string name="user_and_pass_not_match">username or password is incorrect</string>
    <string name="server_error">can\'t reach server. try again</string>
    <string name="setPin">Provide Pin</string>
    <string name="pinHint">Check sms for pin</string>
    <string name="invalid_pin">invalid pin</string>
    <string name="block_user_info">Due to violating our privacy &amp; terms of condition admin blocked your account. If you think this happened by mistake please call customer care hotline number.</string>
    <string name="forget_password_info">To reset your password call hotline number or visit this url  http://hellocar.ga/authentication/forgotPasswordView</string>
    <string name="update_failed">Update Failed</string>
    <string name="provide_old_password">Provide old password</string>
    <string name="password_not_match">Password not match</string>
    <string name="are_you">Are you sure?</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="request_for">You Requested For</string>
    <string name="car_type">Car Type</string>
    <string name="using">Using</string>
    <string name="duration">Duration</string>
    <string name="date_time">date and time</string>
    <string name="cost">cost</string>
    <string name="tk">TK</string>
    <string name="note">Note</string>
    <string name="note_one">If you want to use out of city/additional hour/additional day/additional side etc please contact with us.\nIf you apply any illegal activities, we are not liable for that\'s matter, we\'ll take any legal action against illegal activities.\n If any complain about drivers please call us, no bargain with driver.\nWe are able to apply any decision for anytime any rent rejection/cancel.\nSmoking is not allow in the car.</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="note_5km">When you hire a car to using in city, if you go out 10KM from city, you will pay additional TK-500\nIf you use for marriage ceremony(decoration with flower) you\'ll pay additional 500 TK.\nIf you want use car anywhere please contact with us.\nIf you want to use out of city/additional hour/additional day/additional side etc please contact with us\nAirport Pick or Drop Price only here, if you use for return additional Tk-500 you\'ll pay &amp; time maximum 4 Hours.</string>
    <string name="note_5tk">If you pass your selected time, you will pay Tk 5 per minute.\n Clients always bear all parking cost,bridge toll etc.\nNot allow to use car after 11:00pm.</string>

</resources>
