<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/requestFroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="@dimen/default_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/request_for"/>

    <TextView
        android:id="@+id/carTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestFroTextView"
        android:text="@string/car_type"/>

    <TextView
        android:id="@+id/carTypeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/default_margin_gap"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carTypeTextView"/>

    <TextView
         android:id="@+id/usingTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/requestFroTextView"
        android:text="@string/using"/>

    <TextView
        android:id="@+id/usingTypeNameTextView"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/default_margin_gap"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usingTypeTextView"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/durationAppCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carTypeNameTextView"
        android:text="@string/duration"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/durationNameAppCompatTextView"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/default_margin_gap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/durationAppCompatTextView"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationNameAppCompatTextView"
        android:text="@string/from"/>

    <TextView
        android:id="@+id/fromNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/default_margin_gap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTextView"/>

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textSize="@dimen/text_15"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromNameTextView"
        android:text="@string/to"/>

    <TextView
        android:id="@+id/toNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/default_margin_gap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toTextView"/>

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:textSize="@dimen/text_15"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/usingTypeNameTextView"
        android:text="@string/date_time"/>

    <TextView
        android:id="@+id/dateTimeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_gap"
        android:textSize="@dimen/text_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/dateTimeTextView"/>

    <TextView
        android:id="@+id/costTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"
        android:textSize="@dimen/text_15"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textAllCaps="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toNameTextView"
        android:text="@string/cost"/>

    <TextView
        android:id="@+id/costNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_gap"
        android:textSize="@dimen/text_15"
        android:layout_marginRight="@dimen/margin_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costTextView"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costNameTextView"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="@+id/requestFroTextView"
        app:layout_constraintRight_toRightOf="@+id/requestFroTextView"
        app:layout_constraintTop_toBottomOf="@id/requestFroTextView"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancelAppCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toNameTextView"/>


    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/costNameTextView"
        />

</android.support.constraint.ConstraintLayout>