<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:padding="@dimen/default_padding"
    tools:context="com.rtsoftbd.siddiqui.hellocar.RequestCarFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/headTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/request_your_transport"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/default_text"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/carCatMaterialSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/carCatInfoAppCompatImageButton"
            app:layout_constraintTop_toBottomOf="@+id/headTextView"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/carCatInfoAppCompatImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_blue_900_36dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/default_margin_gap"
            app:layout_constraintLeft_toRightOf="@+id/carCatMaterialSpinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headTextView"
            android:onClick="onViewClicked"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/whereMaterialSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/whereInfoAppCompatImageButton"
            app:layout_constraintTop_toBottomOf="@+id/carCatMaterialSpinner"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/whereInfoAppCompatImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_blue_900_36dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/default_margin_gap"
            app:layout_constraintLeft_toRightOf="@+id/whereMaterialSpinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carCatMaterialSpinner"
            android:onClick="onViewClicked"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/durationMaterialSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/durationInfoAppCompatImageButton"
            app:layout_constraintTop_toBottomOf="@+id/toTextInputLayout"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/durationInfoAppCompatImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_blue_900_36dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/default_margin_gap"
            app:layout_constraintLeft_toRightOf="@+id/durationMaterialSpinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toTextInputLayout"
            android:onClick="onViewClicked"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fromTextInputLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whereMaterialSpinner">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/fromTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from"
                android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/toTextInputLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromTextInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/toTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/to"
                android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateTextInputLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/timeTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/durationMaterialSpinner">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/date"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/timeTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintLeft_toRightOf="@+id/dateTextInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationMaterialSpinner">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/timeTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/time"
                android:inputType="time"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submitRequestAppCompatButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/sent_request"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextInputLayout"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
